--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 body {
   margin: 0px;
   font-family: "BarlowSemiCondensedRegular", sans-serif;
+  overflow-x: hidden;
 }
 
 .page-container {
@@ -161,13 +162,38 @@ h2 {
   font-size: 38px;
   font-weight: 600;
   line-height: 1.4em;
+  /* TODO: make this not reliant on !important */
   margin: 10px auto !important;
   word-wrap: break-word;
+
+  a {
+    color: #ff7bac;
+    text-decoration: none;
+  }
+  a:hover {
+    color: #bcb3fb;
+  }
 }
 
 p {
   margin: 1em 0;
   font-size: 20px;
+}
+
+.origami-buttons {
+  width: fit-content;
+  background-color: #ff7bac;
+  border: 2pt solid #ff7bac;
+  border-radius: 10px;
+  color: white;
+  font-size: 20px;
+  padding: 10px 20px;
+}
+
+.origami-buttons:hover {
+  background-color: #bcb3fb;
+  border-color: #bcb3fb;
+  cursor: pointer;
 }
 
 .first-carousel {
@@ -405,11 +431,16 @@ p {
     max-width: 225px;
     border: 3px solid #ff7bac;
     border-radius: 15px;
+    overflow: hidden;
 
     img {
       height: auto;
       max-width: 225px;
       border-radius: 15px 15px 0 0;
+      transition: 0.5s all ease-in-out;
+    }
+    img:hover {
+      transform: scale(1.5);
     }
     a {
       text-decoration: none;
@@ -459,26 +490,12 @@ p {
     justify-content: center;
     align-items: center;
     gap: 20px;
-
-    button {
-      background-color: #ff7bac;
-      border: 2pt solid #ff7bac;
-      border-radius: 10px;
-      color: white;
-      font-size: 20px;
-      padding: 10px 20px;
-    }
-
-    button:hover {
-      background-color: #bcb3fb;
-      border-color: #bcb3fb;
-    }
   }
 }
 
 /* $optionDefaultColours: #ed5565, #fc6e51, #ffce54, #2ecc71, #5d9cec, #ac92ec; */
 
-.test-fancy-expand {
+.ebooks-fancy-expand {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -633,6 +650,108 @@ p {
     .option:hover {
       border-color: #bcb3fb;
     }
+  }
+}
+
+.diagrams-container {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 20px;
+  margin: auto;
+  column-gap: 20px;
+
+  .diagram {
+    border-radius: 5px;
+    border: 2px solid #ff7bac;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    margin: 0 5px 5px 0;
+    max-width: 225px;
+    padding: 15px;
+    text-align: center;
+    transition: all 0.25s ease-in-out;
+    width: 100%;
+
+    img {
+      height: auto;
+      max-width: 225px;
+      filter: opacity(40%);
+      border-radius: 5px;
+      transition: all 0.25s ease-in-out;
+    }
+
+    a {
+      text-align: center;
+      color: #1e293b;
+      text-decoration: none;
+      line-height: 1.2em;
+      font-weight: 400;
+      font-size: 20px;
+    }
+  }
+
+  .diagram:hover {
+    border-color: #bcb3fb;
+    img {
+      filter: opacity(100%);
+    }
+  }
+}
+
+.visit-paper-shop {
+  padding: 20px;
+}
+
+.misc-links {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  gap: 20px;
+  grid-template-columns: 3;
+  img {
+    max-width: 220px;
+    height: auto;
+  }
+}
+
+.sign-up-newsletter {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+
+  div {
+    width: 100%;
+  }
+
+  img {
+    max-width: 300px;
+    height: auto;
+  }
+
+  .sign-up-form {
+    text-align: left;
+    max-width: 800px;
+  }
+
+  .newsletter-input {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 5px;
+    margin: 0 auto 0 0;
+  }
+
+  button {
+    margin-top: 20px;
+  }
+}
+
+.from-the-author {
+  a {
+    font-weight: 600;
+    color: #ff7bac;
+  }
+  a:hover {
+    color: #bcb3fb;
   }
 }
 
