page is too long, broken into separate pages, testing linkability

--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ body {
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
+
+    a {
+      color: #334155;
+      text-decoration: none;
+    }
   }
 
   .navbar-nav div:hover {
