--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "BarlowSemiCondensed";
-  src: url("/fontFamily/BarlowSemiCondensed-SemiBold.ttf");
+  src: url("https://jwright2021.github.io/workingPortfolio/fontFamily/BarlowSemiCondensed-SemiBold.ttf");
 }
 
 @font-face {
   font-family: "BarlowSemiCondensedRegular";
-  src: url("/fontFamily/BarlowSemiCondensed-Regular.ttf");
+  src: url("https://jwright2021.github.io/workingPortfolio/fontFamily/BarlowSemiCondensed-Regular.ttf");
 }
 
 body {
