--- a/style.css
+++ b/style.css
@@ -209,505 +209,13 @@ p {
   cursor: pointer;
 }
 
-.first-carousel {
-  position: relative;
-
-  .first-carousel-buttons {
-    background-color: transparent;
-    border-radius: 5px;
-    border: 2px solid #ff7bac;
-    cursor: pointer;
-    display: block;
-    height: 40px;
-    padding: 6px;
-    position: absolute;
-    top: 50%;
-    width: 40px;
-  }
-
-  .first-carousel-buttons:hover {
-    cursor: pointer;
-    border-color: #bcb3fb;
-    svg {
-      fill: #bcb3fb;
-    }
-  }
-
-  .first-carousel-buttons#left {
-    left: 20px;
-    z-index: 1;
-  }
-
-  .first-carousel-buttons#right {
-    right: 60px;
-  }
-}
-
-.first-carousel .slider {
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: calc((100% / 2));
-  margin: auto;
-  overflow-x: auto;
-  overflow: hidden;
-  position: relative;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
-  scrollbar-width: 0;
-
-  @media (max-width: 922px) {
-    grid-auto-columns: 100%;
-    overflow: clip;
-    overflow-x: clip;
-  }
-
-  @media (min-width: 923px) {
-    grid-auto-columns: 50%;
-    max-width: 768px;
-  }
-
-  .dragging {
-    scroll-snap-type: none;
-    scroll-behavior: auto;
-  }
-
-  .draggin .card {
-    cursor: grab;
-    user-select: none;
-  }
-
-  .slide {
-    scroll-snap-align: start;
-    height: auto;
-    max-width: 350px;
-    background-color: #eeeeee;
-    color: #1e293b;
-
-    a {
-      text-decoration: none;
-      line-height: 1.2em;
-      font-weight: 600;
-      color: #1e293b;
-      font-size: 23px;
-      cursor: pointer;
-    }
-
-    img {
-      width: auto;
-      max-height: 350px;
-    }
-  }
-}
-
-.slider::-webkit-scrollbar {
-  display: none;
-}
-
-.popular-container {
-  position: relative;
-}
-
-@keyframes sliding-back-and-forth {
-  from {
-    transform: translateX(-140%);
-  }
-  to {
-    transform: translateX(-65%);
-  }
-}
-
-.second-carousel {
-  animation: sliding-back-and-forth 20000ms infinite alternate;
-  column-gap: 20px;
-  display: grid;
-  grid-template-columns: repeat(9, 1fr);
-  margin: auto;
-  /* TODO fix the scrollbar displaying here somehow...  */
-  /* overflow-x: auto; */
-  /* overflow: hidden; */
-  position: relative;
-  row-gap: 20px;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
-  scrollbar-width: 0;
-
-  @media (min-width: 923px) {
-    max-width: 768px;
-  }
-
-  .popular-card {
-    max-width: 240px;
-    background-color: #f6f6f6;
-    color: #1e293b;
-    padding-bottom: 10px;
-    a {
-      text-decoration: none;
-      line-height: 1.2em;
-      font-weight: 400;
-      color: #1e293b;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    img {
-      width: auto;
-      max-height: 240px;
-    }
-  }
-}
-
-.recently-added-container {
-  position: relative;
-  max-width: 798px;
-  margin: auto;
-  overflow: hidden;
-  position: relative;
-  background: white;
-  &::before,
-  &::after {
-    background: linear-gradient(
-      to right,
-      rgba(255, 255, 255, 1),
-      rgba(255, 255, 255, 0)
-    );
-    content: "";
-    height: 700px;
-    position: absolute;
-    width: 200px;
-    z-index: 2;
-  }
-
-  &::after {
-    right: 0;
-    top: 0;
-    transform: rotateZ(180deg);
-  }
-
-  &::before {
-    left: 0;
-    top: 0;
-  }
-}
-
-@keyframes looping-forward-continuously {
-  0% {
-    transform: translateX(0px);
-  }
-  100% {
-    transform: translateX(calc(-200px * 11 - 15px));
-  }
-}
-
-.third-carousel {
-  animation: looping-forward-continuously 20000ms infinite linear;
-  display: flex;
-  margin: auto;
-  position: relative;
-  gap: 20px;
-
-  @media (min-width: 923px) {
-    max-width: 768px;
-  }
-
-  .recently-added-card {
-    max-width: 350px;
-    background-color: #f6f6f6;
-    color: #1e293b;
-    padding-bottom: 10px;
-
-    a {
-      text-decoration: none;
-      line-height: 1.2em;
-      font-weight: 400;
-      color: #1e293b;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    img {
-      width: auto;
-      max-height: 350px;
-    }
-  }
-}
-
-.categories {
-  display: grid;
-  position: relative;
-  grid-template-columns: repeat(3, 1fr);
-  row-gap: 20px;
-  margin: auto;
-  column-gap: 20px;
-
-  .category {
-    text-align: center;
-    max-width: 225px;
-    border: 3px solid #ff7bac;
-    border-radius: 15px;
-    overflow: hidden;
-
-    img {
-      height: auto;
-      max-width: 225px;
-      border-radius: 15px 15px 0 0;
-      transition: 0.5s all ease-in-out;
-    }
-    img:hover {
-      transform: scale(1.5);
-    }
-    a {
-      text-decoration: none;
-      line-height: 1.2em;
-      font-weight: 400;
-      color: #1e293b;
-      font-size: 20px;
-    }
-  }
-}
-
-.category:hover {
-  border-color: #bcb3fb;
-}
-
-.origami-book {
-  display: flex;
-  justify-content: space-between;
-  text-align: left;
-  color: #1e293b;
-  text-decoration: none;
-  img {
-    width: 300px;
-    height: auto;
-  }
-
-  h3 {
-    line-height: 1.2em;
-    font-weight: 600;
-    font-size: 32px;
-  }
-
+.from-the-author {
   a {
-    line-height: 1.2em;
-    font-weight: 400;
-    font-size: 24px;
+    font-weight: 600;
+    color: #ff7bac;
   }
-
-  .book-description {
-    padding-left: 40px;
-  }
-
-  .origami-book-buttons {
-    padding-top: 20px;
-    display: inline-flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
-}
-
-/* $optionDefaultColours: #ed5565, #fc6e51, #ffce54, #2ecc71, #5d9cec, #ac92ec; */
-
-.ebooks-fancy-expand {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  transition: 0.25s;
-
-  .options {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    overflow: hidden;
-
-    min-width: 600px;
-    max-width: 900px;
-    width: calc(100% - 100px);
-
-    height: 400px;
-
-    /* @for $i from 1 through 4 {
-      @media screen and (max-width: 798px - $i*80) {
-        min-width: 600px - $i * 80;
-        .option:nth-child(#{6-$i}) {
-          display: none;
-        }
-      }
-    } */
-
-    .option {
-      border: 3px solid #ff7bac;
-      position: relative;
-      overflow: hidden;
-
-      min-width: 60px;
-      margin: 10px;
-
-      background: var(--optionBackground, var(--defaultBackground, #e6e9ed));
-      background-size: auto 120%;
-      background-position: center;
-
-      cursor: pointer;
-
-      transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
-
-      /* @for $i from 1 through length($optionDefaultColours) {
-        &:nth-child(#{$i}) {
-          --defaultBackground: #{nth($optionDefaultColours, $i)};
-        }
-      } */
-
-      &.active {
-        flex-grow: 10000;
-        transform: scale(1);
-
-        max-width: 600px;
-        margin: 0px;
-        border-radius: 40px;
-
-        background-size: auto 100%;
-        .shadow {
-          box-shadow: inset 0 -120px 120px -120px black,
-            inset 0 -120px 120px -100px black;
-        }
-        .label {
-          bottom: 20px;
-          left: 20px;
-          .info > div {
-            left: 0px;
-            opacity: 1;
-          }
-        }
-        /*&:active {
-               transform:scale(0.9);
-            }*/
-      }
-      &:not(.active) {
-        flex-grow: 1;
-
-        border-radius: 30px;
-        .shadow {
-          bottom: -40px;
-          box-shadow: inset 0 -120px 0px -120px black,
-            inset 0 -120px 0px -100px black;
-        }
-        .label {
-          bottom: 10px;
-          left: 10px;
-          .info > div {
-            left: 20px;
-            opacity: 0;
-          }
-        }
-      }
-      .shadow {
-        position: absolute;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
-
-        height: 120px;
-
-        transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
-      }
-      .label {
-        display: flex;
-        position: absolute;
-        right: 0px;
-
-        height: 40px;
-        transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95);
-        .icon {
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          align-items: center;
-
-          min-width: 40px;
-          max-width: 40px;
-          height: 40px;
-          border-radius: 100%;
-
-          background-color: white;
-          color: var(--defaultBackground);
-        }
-        .info {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-
-          margin-left: 10px;
-
-          color: white;
-
-          white-space: pre;
-          > div {
-            position: relative;
-
-            transition: 0.5s cubic-bezier(0.05, 0.61, 0.41, 0.95),
-              opacity 0.5s ease-out;
-          }
-          .main {
-            font-weight: bold;
-            font-size: 1.2rem;
-          }
-          .sub {
-            transition-delay: 0.1s;
-          }
-        }
-      }
-    }
-
-    .option:hover {
-      border-color: #bcb3fb;
-    }
-  }
-}
-
-.diagrams-container {
-  display: grid;
-  position: relative;
-  grid-template-columns: repeat(3, 1fr);
-  row-gap: 20px;
-  margin: auto;
-  column-gap: 20px;
-
-  .diagram {
-    border-radius: 5px;
-    border: 2px solid #ff7bac;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-    margin: 0 5px 5px 0;
-    max-width: 225px;
-    padding: 15px;
-    text-align: center;
-    transition: all 0.25s ease-in-out;
-    width: 100%;
-
-    img {
-      height: auto;
-      max-width: 225px;
-      filter: opacity(40%);
-      border-radius: 5px;
-      transition: all 0.25s ease-in-out;
-    }
-
-    a {
-      text-align: center;
-      color: #1e293b;
-      text-decoration: none;
-      line-height: 1.2em;
-      font-weight: 400;
-      font-size: 20px;
-    }
-  }
-
-  .diagram:hover {
-    border-color: #bcb3fb;
-    img {
-      filter: opacity(100%);
-    }
+  a:hover {
+    color: #bcb3fb;
   }
 }
 
@@ -758,19 +266,25 @@ p {
   }
 }
 
-.from-the-author {
-  a {
-    font-weight: 600;
-    color: #ff7bac;
-  }
-  a:hover {
-    color: #bcb3fb;
+.links-printables {
+  padding-bottom: 40px;
+}
+
+.page-constants {
+  display: grid;
+  justify-self: center;
+  margin-top: 20px;
+  text-align: center;
+  word-wrap: break-word;
+
+  @media (min-width: 923px) {
+    max-width: 768px;
   }
 }
 
 .footer {
   background-color: #bcb3fb;
-  padding: 30px 0;
+  padding: 10px;
 
   .footer-nav {
     display: flex;
@@ -779,13 +293,24 @@ p {
     gap: 10px;
     font-weight: 400;
     font-size: 17px;
+
+    div {
+      padding: 20px;
+      border-radius: 10px;
+    }
+  }
+
+  .footer-nav div:hover {
+    background-color: #ff7bac;
+    cursor: pointer;
   }
 
   .copyright {
     display: grid;
     justify-items: center;
-    padding-top: 10px;
     color: #000;
+    padding-bottom: 20px;
+    padding-top: 10px;
   }
 
   @media (max-width: 922px) {
