--- a/index-style.css
+++ b/index-style.css
@@ -25,34 +25,50 @@
   .first-carousel-buttons#left {
     left: 20px;
     z-index: 1;
+    @media (max-width: 600px) {
+      left: 20px;
+    }
+    @media (max-width: 320px) {
+      left: 0px;
+    }
   }
 
   .first-carousel-buttons#right {
     right: 60px;
+    @media (max-width: 600px) {
+      right: 20px;
+    }
+    @media (max-width: 320px) {
+      right: 0px;
+    }
   }
 }
 
 .first-carousel .slider {
+  justify-self: center;
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: calc((100% / 2));
+  grid-auto-columns: 50%;
   margin: auto;
-  overflow-x: auto;
-  overflow: hidden;
   position: relative;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
   scrollbar-width: 0;
+  overflow-x: hidden;
+  max-width: 768px;
 
   @media (max-width: 922px) {
+    max-width: 600px;
+    grid-auto-columns: 50%;
+  }
+  @media (max-width: 600px) {
+    max-width: 300px;
     grid-auto-columns: 100%;
-    overflow: clip;
-    overflow-x: clip;
   }
 
-  @media (min-width: 923px) {
-    grid-auto-columns: 50%;
-    max-width: 768px;
+  @media (max-width: 320px) {
+    max-width: 225px;
+    grid-auto-columns: 100%;
   }
 
   .dragging {
@@ -72,18 +88,53 @@
     background-color: #eeeeee;
     color: #1e293b;
 
-    a {
-      text-decoration: none;
-      line-height: 1.2em;
-      font-weight: 600;
-      color: #1e293b;
-      font-size: 23px;
-      cursor: pointer;
+    img {
+      height: auto;
+      max-width: 350px;
     }
 
-    img {
-      width: auto;
-      max-height: 350px;
+    .slide-description {
+      padding: 0 10px;
+    }
+
+    @media (max-width: 922px) {
+      max-width: 275px;
+      overflow-x: hidden;
+
+      img {
+        max-width: 275px;
+      }
+
+      /* a {
+        font-size: 15px;
+      } */
+    }
+
+    @media (max-width: 600px) {
+      max-width: 300px;
+      overflow-x: hidden;
+
+      img {
+        max-width: 300px;
+      }
+
+      /* a {
+        font-size: 12px;
+      } */
+    }
+
+    @media (max-width: 320px) {
+      max-width: 225px;
+      overflow-x: hidden;
+      img {
+        max-width: 225px;
+      }
+      /* a {
+        font-size: 16px;
+      }
+      p {
+        font-size: 14px;
+      } */
     }
   }
 }
@@ -96,7 +147,7 @@
   position: relative;
 }
 
-@keyframes sliding-back-and-forth {
+@keyframes sliding-back-and-forth-desktop {
   from {
     transform: translateX(-140%);
   }
@@ -105,8 +156,26 @@
   }
 }
 
+@keyframes sliding-back-and-forth-tablet {
+  from {
+    transform: translateX(-385%);
+  }
+  to {
+    transform: translateX(10%);
+  }
+}
+
+@keyframes sliding-back-and-forth-mobile {
+  from {
+    transform: translateX(-800%);
+  }
+  to {
+    transform: translateX(25%);
+  }
+}
+
 .second-carousel {
-  animation: sliding-back-and-forth 20000ms infinite alternate;
+  animation: sliding-back-and-forth-desktop 20000ms infinite alternate;
   column-gap: 20px;
   display: grid;
   grid-template-columns: repeat(9, 1fr);
@@ -120,8 +189,21 @@
   scroll-snap-type: x mandatory;
   scrollbar-width: 0;
 
-  @media (min-width: 923px) {
-    max-width: 768px;
+  max-width: 768px;
+
+  @media (max-width: 800px) {
+    max-width: 95vw;
+  }
+
+  @media (max-width: 600px) {
+    max-width: 95vw;
+    grid-template-columns: repeat(18, 1fr);
+    animation: sliding-back-and-forth-tablet 200000ms infinite alternate;
+  }
+
+  @media (max-width: 320px) {
+    max-width: 320px;
+    animation: sliding-back-and-forth-mobile 200000ms infinite alternate;
   }
 
   .popular-card {
@@ -129,18 +211,28 @@
     background-color: #f6f6f6;
     color: #1e293b;
     padding-bottom: 10px;
-    a {
-      text-decoration: none;
-      line-height: 1.2em;
-      font-weight: 400;
-      color: #1e293b;
-      font-size: 20px;
-      cursor: pointer;
-    }
 
     img {
-      width: auto;
-      max-height: 240px;
+      height: auto;
+      max-width: 240px;
+    }
+
+    @media (max-width: 767px) {
+      max-width: 170px;
+      img {
+        max-width: 170px;
+      }
+
+      a {
+        font-size: 16px;
+      }
+    }
+
+    @media (max-width: 600px) {
+      max-width: 140px;
+      img {
+        max-width: 140px;
+      }
     }
   }
 }
