--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -1,3 +1,63 @@
+.modal-overlay {
+  background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+
+  .modal-wrapper {
+    width: 700px;
+    height: 300px;
+    background: ghostwhite;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .close-btn-wrapper {
+    display: flex;
+  }
+
+  .modal-content {
+    margin: 20px auto;
+    max-width: 410px;
+    width: 100%;
+  }
+  h1 {
+    text-align: center;
+  }
+}
+
+.open-modal-btn-wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.close-modal-btn,
+.open-modal-btn {
+  padding: 8px;
+  background: slateblue;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 15px;
+  color: ghostwhite;
+  font-weight: 5px;
+  margin-left: auto;
+  margin-top: 10px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.hide {
+  display: none;
+}
+
 .first-carousel {
   position: relative;
 
