--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,6 @@ body {
 }
 
 .page-width {
-  display: grid;
   justify-self: center;
   margin-top: 20px;
   text-align: center;
@@ -30,6 +29,7 @@ body {
   }
   @media (max-width: 922px) {
     padding: 0 20px;
+    max-width: 90vw;
   }
 }
 
