--- a/homepage.css
+++ b/homepage.css
@@ -184,25 +184,68 @@ page {
 }
 
 .career-resume {
-  .career-card {
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
-    padding-bottom: 30px;
+  display: grid;
+  gap: 20px;
+  padding-bottom: 20px;
+}
+
+.career-card {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  grid-template-areas:
+    "column1"
+    "column2"
+    "column3";
+  > div:nth-child(1) {
+    grid-area: column1;
   }
-  .timeline {
-    width: 30%;
-    text-align: right;
+  > div:nth-child(2) {
+    grid-area: column2;
   }
-  .skills-card {
+  > div:nth-child(3) {
+    grid-area: column3;
+  }
+
+  @media (min-width: 320px) {
+    grid-template-columns: 175px 1fr;
+    grid-template-areas:
+      "column1 column2"
+      "column3 column3";
+    > div:nth-child(1) {
+      text-align: left;
+    }
+    > div:nth-child(2) {
+      text-align: left;
+    }
     text-align: left;
   }
-  .job-card {
-    height: auto;
-    width: 70%;
+
+  @media (min-width: 500px) {
+    grid-template-columns: 175px 1fr;
+    grid-template-areas:
+      "column1 column3"
+      "column2 column3";
+    > div:nth-child(1) {
+      text-align: right;
+    }
+    > div:nth-child(2) {
+      text-align: right;
+    }
     text-align: left;
   }
-  @media (max-width: 769px) {
-    /* display: flex; */
+
+  @media (min-width: 768px) {
+    grid-template-columns: 175px 105px 1fr;
+    grid-template-areas: "column1 column2 column3";
+    > div:nth-child(1) {
+      text-align: right;
+    }
+    > div:nth-child(2) {
+      text-align: right;
+    }
+    > div:nth-child(3) {
+      text-align: left;
+    }
   }
 }
